# collostructional-analysis-python

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: README.md  collostructional_analysis.py
simulator/: README.md  __init__.py  sim1.py  sim2.py  sim3.py  simulator_demo.ipynb
tests/: conftest.py  test_core_structure.py  test_errors.py  test_reproduction.py
validation/: validator_for_core.py
