[project]
name = "collostructional-analysis-python"
version = "0.8.1"
description = "A Python implementation of Stefan Th. Gries's Collostructional Analysis methods (Collexeme, Distinctive, and Co-varying analysis)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "yz-rrr" }
]
keywords = [
    "linguistics", 
    "corpus-linguistics", 
    "collostructional-analysis"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "matplotlib>=3.5",
    "scipy>=1.6.0,<2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]
[project.optional-dependencies]
notebook = [
    "ipywidgets>=7.6"
]
[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
